--- a/templates/taxi/car_detail.html
+++ b/templates/taxi/car_detail.html
@@ -14,11 +14,11 @@
   <p>Manufacturer: ({{ car.manufacturer.name }}, {{ car.manufacturer.country }})</p>
   <h1>Drivers</h1>
   {% if user not in car.drivers.all %}
-    <a href="{% url 'taxi:assign-or-delete-driver' pk=car.id %}" class="btn btn-secondary link-to-page" style="color: white; background-color: green;">
+    <a href="{% url 'taxi:assign_or_delete_car' pk=car.id %}" class="btn btn-secondary link-to-page" style="color: white; background-color: green;">
       Assign me to this car
     </a>
     {% else %}
-      <a href="{% url 'taxi:assign-or-delete-driver' pk=car.id %}" class="btn btn-danger link-to-page">
+      <a href="{% url 'taxi:assign_or_delete_car' pk=car.id %}" class="btn btn-danger link-to-page">
         Delete me from this car
       </a>
   {% endif %}
